# Videos

./: README.md  docker-compose.keycloak.yml  docker-compose.override.yml  docker-compose.yml
Content/: Dockerfile  README.md  app.env  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt  yoyo.ini
Content/app/: __init__.py  config.py  dependencies.py  main.py  migrations.py  utils.py  views.py
Content/app/adapters/: __init__.py  get_videos_list_by_uuids_from_postgresql.py
Content/app/adapters/external_system_heath_check/: postgresql_heath_check.py
Content/app/adapters/get_tags_by_video_uuid/: get_tags_by_video_uuid_from_postgresql.py
Content/app/adapters/get_video_by_uuid/: get_videos_by_uuid_from_postgresql.py
Content/app/api/: __init__.py  exceptions.py  routers.py  schemas.py  statuses.py  swagger.py  views.py
Content/app/api/dependencies/: postgresql.py
Content/app/application/: __init__.py
Content/app/core/: __init__.py
Content/app/helpers/: exceptions.py  sql.py  statuses.py  swagger.py
Content/app/infrastructure/: __init__.py
Content/app/models/: videos.py  videos_tags.py
Content/app/videos/: models.py  repositories.py  views.py
Content/fixtures/: test_data_videos.sql  test_data_videos_tags.sql
Content/migrations/: 20241109_01_Nxmmp-init-tables-videos-videos-tags.py  20250220_01_vsKT6-added-is-deleted-for-video.py
Content/nginx/conf.d/: cdn.enviloup.conf  content-app.conf
Content/tests/unit/: conftest.py
Profile/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  yoyo.ini
Profile/app/: config.py  dependencies.py  main.py  views.py
Profile/app/api/: routers.py
Profile/app/dependencies/: jwt.py  postgresql.py
Profile/app/helpers/: statuses.py  swagger.py
Profile/app/models/: channel.py  user_profile.py
Profile/app/profile/: models.py  repositories.py  schemas.py  views.py
Profile/migrations/: 20250209_01_6gKsU-init-tables-user-profiles-channels.py
Profile/nginx/conf.d/: profile-app.conf
Recommendations/: README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
Recommendations/app/: dependencies.py  main.py  redis_client.py  repository.py  schemas.py
Recommendations/app/helpers/: exceptions.py  schemas.py  statuses.py  swagger.py
Recommendations/app/routers/: videos.py
Recommendations/app/services/: ml.py
Recommendations/nginx/: nginx.conf
Recommendations/nginx/conf.d/: recommendations-app.conf
Search/: .gitignore  Dockerfile  README.md  app.env  docker-compose.override.yaml  docker-compose.yml  pyproject.toml  requirements.txt
Search/app/: config.py  main.py  views.py
Search/app/api/: routers.py
Search/app/dependencies/: elasticsearch.py
Search/app/helpers/: exceptions.py  schemas.py  statuses.py  swagger.py
Search/nginx/: nginx.conf
Search/nginx/conf.d/: cdn.enviloup.conf  search-app.conf
(+186 files in other folders)
