[tool.poetry]
name = "profile"
version = "0.1.0"
description = ""
authors = ["justTrueCodeWriter <dmjustcoder8@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"